noinst_LIBRARIES = base/libenigma_base.a

base_libenigma_base_a_SOURCES = \
	buffer.cpp \
	connection.cpp \
	console.cpp \
	ebase.cpp \
	eenv.cpp \
	eerror.cpp \
	elock.cpp \
	encoding.cpp \
	estring.cpp \
	etpm.cpp \
	filepush.cpp \
	init.cpp \
	ioprio.cpp \
	message.cpp \
	nconfig.cpp \
	rawfile.cpp \
	smartptr.cpp \
	thread.cpp \
	httpstream.cpp \
	socketbase.cpp

EXTRA_DIST = \
	base/eenv.cpp.in

baseincludedir = $(pkgincludedir)/lib/base
baseinclude_HEADERS = \
	buffer.h \
	console.h \
	ebase.h \
	eenv.h \
	eerror.h \
	elock.h \
	encoding.h \
	eptrlist.h \
	estring.h \
	etpm.h \
	filepush.h \
	i18n.h \
	itssource.h \
	init.h \
	init_num.h \
	ioprio.h \
	message.h \
	nconfig.h \
	object.h \
	rawfile.h \
	ringbuffer.h \
	smartptr.h \
	thread.h \
	httpstream.h \
	socketbase.h
